--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "home/.todo.actions.d/recur"]
 	path = home/.todo.actions.d/recur
 	url = git@github.com:vbfischer/recur.git
+[submodule "antigen"]
+	path = antigen
+	url = git@github.com:zsh-users/antigen.git
