--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "antigen"]
 	path = antigen
 	url = git@github.com:zsh-users/antigen.git
+[submodule "antigen.symlink"]
+	path = antigen.symlink
+	url = https://github.com/zsh-users/antigen.git
