--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
-[submodule "home/.todo.actions.d/recur"]
-	path = home/.todo.actions.d/recur
-	url = git@github.com:vbfischer/recur.git
-[submodule "antigen"]
-	path = antigen
-	url = git@github.com:zsh-users/antigen.git
-[submodule "antigen.symlink"]
-	path = antigen.symlink
-	url = https://github.com/zsh-users/antigen.git
+[submodule "zilsh"]
+	path = zilsh
+	url = git@github.com:zilsh/zilsh.git
+[submodule "bundle/oh-my-zsh-bundle/oh-my-zsh"]
+	path = bundle/oh-my-zsh-bundle/oh-my-zsh
+	url = git@github.com:robbyrussell/oh-my-zsh.git
