--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "bundle/oh-my-zsh-bundle/oh-my-zsh"]
 	path = bundle/oh-my-zsh-bundle/oh-my-zsh
 	url = git@github.com:robbyrussell/oh-my-zsh.git
+[submodule "hammerspoon.symlink"]
+	path = hammerspoon.symlink
+	url = git@github.com:vbfischer/oh-my-hammerspoon.git
