added some desktop widgets added hyper as terminal

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -19,3 +19,4 @@
     ~/.gitignore_global:  git/gitignore
     ~/.gitconfig:         git/gitconfig
     ~/.hammerspoon:       hammerspoon/
+    ~/.hyper.js:          hyper.js
