--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "dotbot-brew"]
 	path = dotbot-brew
 	url = https://github.com/d12frosted/dotbot-brew.git
+[submodule "bundle/oh-my-zsh-bundle/oh-my-zsh"]
+	path = bundle/oh-my-zsh-bundle/oh-my-zsh
+	url = git@github.com:robbyrussell/oh-my-zsh.git
